<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".persegi"
    android:background="@color/colorAccent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/subjudul_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@color/persegi"
        android:text="@string/persegi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/luas_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/luas"
        android:layout_below="@id/subjudul_p"
        android:textSize="20sp" />
        <TextView
            android:id="@+id/panjang1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/panjang"
            android:textSize="10sp" />
        <EditText
            android:id="@+id/panjang_pl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/lebar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lebar"
            android:textSize="10sp" />
        <EditText
            android:id="@+id/lebar_pl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/btn_luas"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:text="@string/hitung"
            android:onClick="btn_luas_P"/>
        <TextView
            android:id="@+id/hasil_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_l"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/keliling_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/keliling"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/panjang2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/panjang"
            android:textSize="10sp" />
        <EditText
            android:id="@+id/panjang_pk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@id/luas_p"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/lebar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lebar"
            android:textSize="10sp" />
        <EditText
            android:id="@+id/lebar_pk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/btn_kel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:text="@string/hitung"
            android:onClick="btn_keliling"/>
        <TextView
            android:id="@+id/hasil_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_k"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="back"
            android:onClick="back"
            android:background="@color/back"
            android:layout_marginLeft="225dp"/>
        <Button
            android:id="@+id/reset"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:background="@color/reset"
            android:onClick="reset"/>
    </LinearLayout>

    </RelativeLayout>
</ScrollView>
</RelativeLayout>