<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kubus">

    <TextView
        android:id="@+id/subjudul_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/kubus"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/kubus" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/luas_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Menghitung Luas dan Keliling"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/sisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Masukkan Sisi :"
            android:textSize="10sp" />
        <EditText
            android:id="@+id/sisi_kubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/btn_luas2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:text="@string/hitung"
            android:onClick="btn_luas_k"/>
        <TextView
            android:id="@+id/hasil_lk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_l"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/hasil_kk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil_k"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="back"
            android:background="@color/back"
            android:onClick="back"
            android:layout_marginLeft="225dp"/>
        <Button
            android:id="@+id/reset"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:background="@color/reset"
            android:onClick="reset"/>
    </LinearLayout>
</RelativeLayout>